--- a/config/config.yaml
+++ b/config/config.yaml
@@ -95,3 +95,11 @@ platforms:
     name: "微博"
   - id: "zhihu"
     name: "知乎"
+  - id: "_36kr"
+    name: "36kr"
+  - id: "ithome"
+    name: "IT之家"
+  - id: "solidot"
+    name: "solidot"
+  - id: "cankaoxiaoxi"
+    name: "参考消息"
